[package]
name = "html-query"
version = "0.2.0"
edition = "2021"
authors = ["Tom Forbes <tom@tomforb.es>"]
repository = "https://github.com/orf/hq"
license = "MIT"
description = "jq, but for HTML"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.32", features = ["derive"] }
markup5ever = "0.11.0"
nom = "7.1.2"
nom-supreme = "0.8.0"
pest = "2.5.3"
pest_derive = "2.5.2"
scraper = "0.14.0"
serde_json = "1.0.89"
thiserror = "1.0.37"

[[bin]]
name = "hq"
path = "src/main.rs"
