[package]
name = "html-query"
version = "1.0.1"
edition = "2021"
authors = ["Tom Forbes <tom@tomforb.es>"]
repository = "https://github.com/orf/hq"
license = "MIT"
description = "jq, but for HTML"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }
markup5ever = "0.11.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
pest = "2.5.5"
pest_derive = "2.5.2"
scraper = "0.16.0"
serde_json = "1.0.96"
thiserror = "1.0.40"

[[bin]]
name = "hq"
path = "src/main.rs"
