[package]
name = "html-query-extractor"
version = "0.2.0"
edition = "2021"
authors = ["Tom Forbes <tom@tomforb.es>"]
repository = "https://github.com/orf/hq"
license = "MIT"
description = "HTML extractor for hq: jq, but for HTML"

[dependencies]
markup5ever = "0.11.0"
serde_json = "1.0.93"
scraper = "0.18.0"
thiserror = "1.0.40"
html-query-ast = {version= "0.2.0", path= "../html-query-ast" }
