[package]
name = "html-query-web-ui"
authors = ["Tom Forbes <tom@tomforb.es>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }
html-query-ast = {version= "0.2.1", path= "../html-query-ast" }
html-query-extractor = {version= "0.2.1", path= "../html-query-extractor" }
serde_json = { version = "1.0.96", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }

log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"

[package.metadata.release]
release = false
