[package]
name = "html-query"
version = "1.0.1"
edition = "2021"
authors = ["Tom Forbes <tom@tomforb.es>"]
repository = "https://github.com/orf/hq"
license = "MIT"
description = "jq, but for HTML"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
anyhow = "1.0.70"
serde_json = "1.0.93"
html-query-ast = {version= "0.1.1", path= "../html-query-ast" }
html-query-extractor = {version="0.1.0", path= "../html-query-extractor" }

[[bin]]
name = "hq"
path = "src/main.rs"
