[package]
name = "html-query-ast"
version = "0.2.2"
edition = "2021"
authors = ["Tom Forbes <tom@tomforb.es>"]
repository = "https://github.com/orf/hq"
license = "MIT"
description = "Expression parser for hq: jq, but for HTML"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "=8.0.0"
scraper = {workspace = true}
