[package]
name = "html-query-extractor"
version = "0.2.2"
edition = "2021"
authors = ["Tom Forbes <tom@tomforb.es>"]
repository = "https://github.com/orf/hq"
license = "MIT"
description = "HTML extractor for hq: jq, but for HTML"

[dependencies]
markup5ever = "0.14.1"
serde_json = "1.0.140"
scraper = "0.23.1"
thiserror = "1.0.65"
html-query-ast = {version= "0.2.2", path= "../html-query-ast" }
