[package]
name = "html-query-web-ui"
authors = ["Tom Forbes <tom@tomforb.es>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.5.1"
dioxus-web = "0.5.1"
getrandom = { version = "0.2", features = ["js"] }
html-query-ast = {version= "0.2.2", path= "../html-query-ast" }
html-query-extractor = {version= "0.2.2", path= "../html-query-extractor" }
serde_json = { version = "1.0.116", default-features = false }
serde = { version = "1.0.199", features = ["derive"] }

log = "0.4.19"
dioxus-logger = "0.5.0"
console_error_panic_hook = "0.1.7"

[package.metadata.release]
release = false
