[package]
name = "html-query"
version = "1.2.2"
edition = "2021"
authors = ["Tom Forbes <tom@tomforb.es>"]
repository = "https://github.com/orf/hq"
license = "MIT"
description = "jq, but for HTML"
readme = "../../README.md"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0.81"
serde_json = "1.0.93"
html-query-ast = {version= "0.2.2", path= "../html-query-ast" }
html-query-extractor = {version= "0.2.2", path= "../html-query-extractor" }

[[bin]]
name = "hq"
path = "src/main.rs"
